# be-admin/dto/tier.go
@@ -1,0 +1,6 @@
+package dto
+
+type TierModel struct {
+	Id   int64  `json:"id"`
+	Code string `json:"code"`
+}
